# myworkflow

./: .dockerignore  .env_example  .gitignore  Dockerfile  dev.sh  docker-compose.yml  pyproject.toml
.postgres-scripts/: create-databases.sql
src/: agent.py  executor.py  logger.py  main.py  query.py  ui.py
src/agents/: __init__.py  analyst.py  coder.py  prompt_optimizer.py  reader.py  researcher.py  reviewer.py  tester.py
src/middlewares/: __init__.py  local_context.py  python_executor.py
src/skills/: __init__.py
src/skills/analysis/consulting-analysis/: SKILL.md
src/skills/assistant/pdf-translate/: SKILL.md
src/skills/bootstrap/: SKILL.md
src/tools/: __init__.py  browser.py  download.py  file.py  markitdown.py  search.py
