[project]
name = "myworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.4",
    "deepagents>=0.4.11",
    "deepagents-acp>=0.0.4",
    "gradio>=6.9.0",
    "helium>=7.0.0",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.1",
    "openai>=2.28.0",
    "selenium>=4.41.0",
]
