[project]
name = "myworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.4",
    "deepagents>=0.4.11",
    "deepagents-acp>=0.0.4",
    "gradio>=6.9.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.1",
    "openai>=2.28.0",
    "pytest-playwright>=0.7.2",
]
