[project]
name = "myworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.4",
    "deepagents>=0.4.11",
    "deepagents-acp>=0.0.4",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langfuse>=4.0.1",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.3",
    "pytest-playwright>=0.7.2",
]

[tool.uv.sources]
deepagents-acp = { git = "https://github.com/KuTuGu/deepagents.git", subdirectory = "libs/acp", rev = "feature/acp-logger" }
